Fix sidenav border in collapsed mode

--- a/packages/angular/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
+++ b/packages/angular/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
@@ -8,11 +8,16 @@
 .border {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 247px;
   bottom: 0;
   width: 3px;
   opacity: 0.5;
   background: linear-gradient(to left, rgba(0, 0, 0, 0.2) 0px, rgba(0, 0, 0, 0.2) 1px, rgba(0, 0, 0, 0.1) 1px, rgba(0, 0, 0, 0) 100% );
+  transition: all 400ms ease;
+
+  &[data-compact="true"] {
+    left: 63px;
+  }
 }
 
 .menu-container {
@@ -86,9 +91,9 @@
   min-height: 100%;
   height: 100%;
   width: 250px !important;
+  background-color: $side-panel-background;
 
   .menu-container {
-    background-color: $side-panel-background;
     min-height: 100%;
     flex: 1;
 
